# coffinit

./: .gitignore  LICENSE  README.md  pyproject.toml
coffinit/: __init__.py  cli.py  config.py  display.py  github.py  i18n.py  scorer.py
